--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
   <title>My HTML Page</title>
+  <style>
+    .text {
+      font-size: 690px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello, world!</h1>
+  <h1 class="text">Hello, World! BY GRACER ANN ESCALADA</h1>
 </body>
 </html>
